# react-native-planarian

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-planarian.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/planarian/: PlanarianModule.java  PlanarianPackage.java
cpp/: react-native-planarian.cpp  react-native-planarian.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/planarianexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/PlanarianExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/PlanarianExample.xcodeproj/: project.pbxproj
example/ios/PlanarianExample.xcodeproj/xcshareddata/xcschemes/: PlanarianExample.xcscheme
example/ios/PlanarianExampleTests/: PlanarianExampleTests.m
example/src/: App.tsx
ios/: Planarian.h  Planarian.mm
src/: NativePlanarian.ts  index.tsx
